✨ Add: 기초 셋업 파일2

--- a/PADO/PADO/Info.plist
+++ b/PADO/PADO/Info.plist
@@ -15,6 +15,7 @@
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>fetch</string>
 		<string>processing</string>
 		<string>remote-notification</string>
 	</array>
