💄 Design: MainView UI 구현 완료
댓글, 신고화면 UI구현 완료

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,4 @@ GoogleService-Info.plist
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,swift,xcodei
 
+PADO/PADO/GoogleService-Info.plist
