--- a/PADO/PADO/Info.plist
+++ b/PADO/PADO/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>이 앱은 포스팅을 위해 사용자의 카메라에 접근합니다.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>이 앱은 포스팅을 위해 사용자의 앨범에 접근합니다.</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
