--- a/PADO/.swiftlint.yml
+++ b/PADO/.swiftlint.yml
@@ -1,48 +1,76 @@
-disabled_rules: # Default Rules에서 비활성화할 규칙
-    - colon
-    - comma
-    - control_statement
-opt_in_rules:
-  # .count==0 보다는 .isEmpty를 사용하는 것이 좋습니다. https://realm.github.io/SwiftLint/empty_count.html
-  - empty_count
-  # 빈 String 문자열과 비교하는 것 보다는 .isEmpty를 사용하는 것이 좋습니다. https://realm.github.io/SwiftLint/empty_string.html
-  - empty_string
-included: # 린트 과정에 포함할 파일 경로. 이 항목이 존재하면 `--path`는 무시됨
-  - Source
-excluded: # 린트 과정에서 무시할 파일 경로. `included`보다 우선순위 높음
-  - Carthage
-  - Pods
-  - Source/ExcludedFolder
-  - Source/ExcludedFile.swift
+--- # 문서의 시작
 
-# 설정 가능한 룰은 이 설정 파일에서 커스터마이징 가능
-# 경고나 에러 중 하나를 발생시키는 룰은 위반 수준을 설정 가능
-force_cast: warning # 암시적으로 지정
-force_try:
-  severity: warning # 명시적으로 지정
-# 경고 및 에러 둘 다 존재하는 룰의 경우 값을 하나만 지정하면 암시적으로 경고 수준에 설정됨
-line_length: 110
-# 값을 나열해서 암시적으로 양쪽 다 지정할 수 있음
-type_body_length:
-  - 300 # 경고
-  - 400 # 에러
-# 둘 다 명시적으로 지정할 수도 있음
-file_length:
-  warning: 500
-  error: 1200
-# 네이밍 룰은 경고/에러에 min_length와 max_length를 각각 설정 가능
-# 제외할 이름을 설정할 수 있음
+
+# 기본 적용되는 룰에서 사용하지 않는 룰
+disabled_rules:
+  - trailing_whitespace                    # 후행 공백 (선행 공백과 더불어 필요없다고 미적용이 불필요하다고 생각됨) - 선택 필요
+  - nesting                                # 중첩
+  - vertical_whitespace                    # 세로 공백
+  - redundant_optional_initialization      # 옵셔널 타입을 nil로 초기화 중복
+  - unused_closure_parameter               # 미사용 클로저 파라미터 _ 대체
+  - syntactic_sugar                        # 간결한 표현 (Array 대신 [Int] 등의 표현)
+  - cyclomatic_complexity                  # 순환 복잡성
+  - type_body_length                       # 타입 본문의 행 길이 제한
+  - file_length                            # 파일 줄 길이 제한
+  - unused_optional_binding                # 사용되지 않는 옵셔널 바인딩 제한
+  - function_parameter_count               # 파라미터 갯수 제한
+  - function_body_length                   # 함수 본문의 행 길이 제한
+  - large_tuple                            # 튜플 인자 수 제한
+  - unused_control_flow_label              # 미사용 제어 플로우 제거
+  - trailing_comma                         # 배열 및 딕셔너리에서 후행 쉼표 조건 (적용 혹은 미적용)
+  - opening_brace                          # 중괄호 선언 조건 (중괄호 앞 단일 공백 및 선언과 같은 행)
+  - closure_parameter_position             # 클로저 매개변수 위치 (중괄호와 같은 행)
+  - for_where                              # for where 절 선호 (for 문 내 if 사용 대체)
+  - inclusive_language                     # 포괄적 언어 사용 (인종, 성별, 사회경제적 지위를 나타내는 언어 사용금지)
+  - statement_position                     # 구문 위치 제한 (else, catch 등이 선언 바로 뒤 한칸 공백 후 위치함) - 선택 필요
+  - todo                                   # TODO, FIXME 주석 제한
+  - comma
+  - colon
+  - trailing_newline
+  - multiple_closures_with_trailing_closure
+  - indentation_width
+  
+# 옵트 인 룰
+opt_in_rules:
+  - indentation_width                      # 인덴트 룰 적용
+  - closure_end_indentation                # 클로저의 끝 괄호를 시작한 행과의 들여쓰기 맞춤
+  - empty_string                           # == ""보다 isEmpty 선호
+  - sorted_imports                         # import 시 알파벳 순 정렬
+
+# 타입 네이밍 커스텀 정의
 type_name:
-  min_length: 4 # 경고에만 적용됨
-  max_length: # 경고와 에러 둘 다 적용
-    warning: 40
-    error: 50
-  excluded: iPhone # 제외할 문자열 값 사용
+  min_length:
+    warning: 1
+  max_length:
+    warning: 120
+  allowed_symbols:
+    - _
+
+# 식별자 네이밍 커스텀 정의
 identifier_name:
-  min_length: # min_length에서
-    error: 4 # 에러만 적용
-  excluded: # 제외할 문자열 목록 사용
-    - id
-    - URL
-    - GlobalAPIKey
-reporter: "xcode" # 보고 유형 (xcode, json, csv, codeclimate, checkstyle, junit, html, emoji, sonarqube, markdown, github-actions-logging)
+  min_length:
+    warning: 0
+    error: 0
+  max_length:
+    warning: 120
+    error: 120
+  allowed_symbols:
+    - $
+    - _
+
+# 행 길이 커스텀 정의
+line_length:
+  ignores_urls: true                       # URL에 대해 행 길이 제한 미적용
+  ignores_comments: true                   # 코멘트에 대해 행 길이 제한 미적용
+  ignores_interpolated_strings: true       # 보간된 문자열 행 길이 제한 미적용
+  warning: 200
+  error: 250
+
+# 룰 적용 제외할 파일
+excluded:
+  - Pods
+  - LintTest/AppDelegate.swift
+  - LintTest/SceneDelegate.swift
+
+
+... # 문서의 끝
