🌊 Feat: 페이스모지 작성 시 FCM 전송
Co-Authored-By: 황민채 <103357078+Hminchae@users.noreply.github.com>

--- a/PADO/PADO/Info.plist
+++ b/PADO/PADO/Info.plist
@@ -12,14 +12,15 @@
 				<string>${CLIENT_ID}</string>
 			</array>
 		</dict>
+		<dict/>
 	</array>
-    <key>firebase_Push_Api_Key</key>
-    <string>$(FIREBASE_PUSH_API_KEY)</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
 		<string>processing</string>
 		<string>remote-notification</string>
 	</array>
+	<key>firebase_Push_Api_Key</key>
+	<string>$(FIREBASE_PUSH_API_KEY)</string>
 </dict>
 </plist>
