✨ Add:  fastlane 자동화 배포 기능 추가

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,4 @@ GoogleService-Info.plist
 # End of https://www.toptal.com/developers/gitignore/api/macos,swift,xcodei
 
 PADO/PADO/GoogleService-Info.plist
+PADO/fastlane/.env
