🩹 Refactor: 뷰 모디파이어들 하나로 관리하게 수정 등
1. 뷰 모디파이어들 하나로 관리하게 수정
    - .sheet{ } 등
2. 햅틱헬퍼 싱글톤 파일 따로 분리 - 의존성 주입 또는 싱글톤 아닌 방법을 고려
3. .onChange 을 쓸때 어떠한 액션없이 사용하도록 변경

--- a/PADO/.swiftlint.yml
+++ b/PADO/.swiftlint.yml
@@ -33,6 +33,8 @@ disabled_rules:
   - closure_end_indentation
   - closing_brace
   - force_cast
+  - redundant_discardable_let
+  - class_delegate_protocol
   
 # 옵트 인 룰
 opt_in_rules:
